# PDF-Extract-Kit

./: .gitignore  .gitignore.swp  PDF-Extract-Kit_CLA.md  README-zh_CN.md  README.md  README_zh-CN.md  analyze_log.py  app.py  batch_deal_with_layout.py  batch_run.sh  batch_run_utils.py  check_log.sh  clean_srun_log.sh  create_onnx.py  dataaccelerate.py  export_onnx.py  get_batch_layout_model.py  get_batch_yolo.py  get_data_utils.py  global_args.yaml  models  pdf_extract.py  pdf_result_to_markdown.py  process_enroll.py  process_pdf.py  pyproject.toml  requirements+cpu.txt  requirements-cpu.txt  requirements-windows.txt  requirements-without-unimernet+cpu.txt  requirements.txt  rough_layout.py  rough_layout_with_aync.py  rough_rec.py  run_detectron_tensorRT.py  run_enroll.sh  run_pdf.sh  scihub_pdf_dataset.py  show_enroll_list.py  shut_all.sh  (+2 more)
Failcase/: README.md
app_tools/: config.py  formula_analysis.py  layout_analysis.py  ocr_analysis.py  pdf.py  table_analysis.py  utils.py  visualize.py
batch_running_task/: README.md  batch_run.sh  batch_run_utils.py  check_log.sh  get_data_utils.py  job_dispatch.sh  scihub_pdf_dataset.py  task_schedule.sh  utils.py
configs/: config.yaml  formula_detection.yaml  formula_recognition.yaml  layout_detection.yaml  layout_detection_layoutlmv3.yaml  layout_detection_yolo.yaml  model_configs.yaml  ocr.yaml  table_parsing.yaml
demo/: Table_Recognition.ipynb
docs/: Install_in_MacOS_en.md  Install_in_MacOS_zh_cn.md  Install_in_Windows_en.md  Install_in_Windows_zh_cn.md  Install_in_macOS_en.md  Install_in_macOS_zh_cn.md  (+1 more)
(+295 files in other folders)
