[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-extract-kit"
version = "0.1.0"
authors = [
    { name="Bin Wang", email="ictwangbin@gmail.com" }
]
description = "A Comprehensive Toolkit for High-Quality PDF Content Extraction."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PyPDF2",
    "matplotlib",
    "pyyaml",
    "frontend",
    "pymupdf",
    opencv-python = "^4.6.0"
    # Add other common dependencies
]

[project.optional-dependencies]
layout_detection = [
    "transformers",  # for layoutlmv3
    # Add other dependencies for layout detection
]
formula_detection = [
    "ultralytics",  # for yolov8
    # Add other dependencies for formula detection
]
# Add additional dependencies for other models
